bring docs to root

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uber Eats</title>
-    <link rel="stylesheet" href="/public/styles/style.css">
-    <link rel="stylesheet" href="/public/styles/responsivity.css">
-    <link rel="stylesheet" href="/public/styles/modal.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsivity.css">
+    <link rel="stylesheet" href="modal.css">
 
     <script>
         document.documentElement.className += ' js'
@@ -299,7 +299,7 @@
 
     </div>
     
-    <script src="/public/scripts/script.js"></script>
+    <script src="script.js"></script>
 
 
 </body>
