active modal added to all buttons

--- a/index.html
+++ b/index.html
@@ -38,17 +38,18 @@
             </div>
             <div class="discover-wrapper js-scroll">
                 <h1>Discover restaurants that <span>deliver <br> near you</span></h1>
-                <form action="">
+                <div>
                     <input type="text" placeholder="Enter your delivery address">
-                    <button type="submit">Find Food</button>
-                </form>
+                    <button class="menu-open-btn">Find Food</button>
+                </div>
+                
             </div>
         </section>
 
         <section class="block-b grid-5">
             <div class="find-food-wrapper js-scroll">
                 <h1>Find food you love from local<br> restaurants and chain <span>favourites.</span></h1>
-                <button>Find Food</button>
+                <button class="menu-open-btn">Find Food</button>
             </div>
             
             <div class="find-food-image">
